trunk/Archive2/1a/4ec482a2fbd754/output
main.cpp:1:16: warning: unused parameter 'x' [-Wunused-parameter]
void test(int *x)
               ^
main.cpp:8:10: error: incompatible pointer types passing 'char *' to parameter of type 'int *' [-Werror,-Wincompatible-pointer-types]
    test(x);
         ^
main.cpp:1:16: note: passing argument to parameter 'x' here
void test(int *x)
               ^
main.cpp:10:2: error: no newline at end of file [-Werror,-Wnewline-eof]
}
 ^
1 warning and 2 errors generated.
